[package]
name = "efu-search-webui-rust"
version = "0.1.0"
edition = "2024"
description = "High-performance EFU file search web application"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SNisin/efu-search-webui-rust"
keywords = ["search", "files", "web", "rust", "performance"]
categories = ["web-programming", "filesystem", "data-structures"]
default-run = "efu-search-webui-rust"

[dependencies]
csv = "1.3.1"
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bumpalo = { version = "3.19.0", features = ["collections", "boxed"] }
regex = { version = "1.11.1", features = ["unicode", "perf", "perf-dfa-full"] }

[profile.dev]
opt-level = 1           # Opt level 0 is too slow even for dev builds
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = true             # Keep debug info for profiling
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "fat"              # Enable LTO for better performance
panic = 'unwind'
incremental = false
codegen-units = 1        # Use a single codegen unit for better optimization
rpath = false

[[bin]]
name = "efu-search-webui-rust"
path = "src/main.rs"

[[bin]]
name = "perf_test"
path = "src/bin/perf_test.rs"
test = false
