[package]
name = "tankseek"
version = "0.1.0"
edition = "2024"
description = "TankSeek File Search — high-performance EFU file search web application"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SNisin/tankseek-file-search"
keywords = ["search", "files", "web", "rust", "performance"]
categories = ["web-programming", "filesystem", "data-structures"]
default-run = "tankseek"

[dependencies]
csv = "1.3.1"
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bumpalo = { version = "3.19.0", features = ["collections", "boxed"] }
regex = { version = "1.11.1", features = ["unicode", "perf", "perf-dfa-full"] }

[[bin]]
name = "tankseek"
path = "src/main.rs"

[[bin]]
name = "perf_test"
path = "src/bin/perf_test.rs"
test = false
